--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "adwr_table_data": "0.0.4",
     "axios": "^0.19.2",
     "esri-loader": "^2.15.0",
     "react": "^16.13.1",
